# aoc-2020

./: .gitignore  Cargo.toml  README.md
src/day1/: main.rs
src/day2/: main.rs
src/day3/: main.rs
src/day4/: main.rs
src/day5/: main.rs
src/day6/: main.rs
src/day7/: main.rs
src/day8/: main.rs
