[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["ToxicMushroom <32853531+ToxicMushroom@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/day6/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"